# motions_skills

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/ISSUE_TEMPLATE/: amend-skill.md  new-skill.md
action/: ExecuteCartesianTrajectory.action  ExecuteJointTrajectory.action  ReplayMotion.action
srv/: ListMotions.srv
