<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_skills</name>
  <version>1.0.0</version>
  <description>Interfaces for PAL Motion-related skills</description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <license>Apache License 2.0</license>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_skills</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_archlint</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>

    <skill content-type="yaml">
      id: execute_joint_trajectory
      description: |
        Execute a joint trajectory on the robot by specifying
        a list of joint positions and timestamps.

      interface: action
      default_interface_path: /skill/execute_joint_trajectory
      datatype: motion_skills/action/ExecuteJointTrajectory.action
      functional_domains:
        - motions
      parameters:
        in:
          - name: trajectory
            type: :msg:`trajectory_msgs/msg/JointTrajectory`
            required: true
            description: |
              The joint trajectory to execute.

              Depending on the implementation, the skill might only handle
              position control, or additional velocity, acceleration and effort control.

              See :msg:`trajectory_msgs/msg/JointTrajectory` for details.
          - name: safe_mode
            type: boolean
            default: true
            description: |
              If true, the robot will execute the trajectory in a safe mode.
              The 'safe mode' is implementation-dependent, but typically means
              collision avoidance, speed limits, etc.
          - name: meta.priority
            type: integer
            default: 128
            description: Between 0 and 255. Higher means this skill request will be prioritized.
    </skill>

  </export>
</package>
  
